# capnp-ocaml

./: .gitignore  CHANGES.md  README.adoc
src/benchmark/: dune
src/benchmark/fastRand/: dune
src/compiler/: generate.ml
src/runtime/: builderInc.ml  bytesStorage.ml  bytesStorage.mli  capnp.ml  codecs.ml  listStorageType.ml  listStorageType.mli  message.ml  messageSig.ml  messageStorage.ml  otherPointer.ml  rPC.ml  readerInc.ml  util.ml
